# vurl

./: .gitmodules  CMakeLists.txt  shell.nix
examples/: CMakeLists.txt
examples/base/: CMakeLists.txt  example_base.cpp  example_base.hpp
examples/deffered_renderer/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  material.hpp  mesh.hpp  node.hpp  primitive.cpp  primitive.hpp  scene.cpp  scene.hpp
examples/deffered_renderer/shaders/: glslc_compile_shader.sh  gpass.frag  gpass.vert  gpass_frag.spv  gpass_vert.spv  lighting.frag  lighting.vert  lighting_frag.spv  lighting_vert.spv
examples/forward_suzanne/: CMakeLists.txt  frag.spv  main.cpp  shader.frag  shader.vert  vert.spv
examples/triangle/: CMakeLists.txt  main.cpp
include/vurl/: buffer.hpp  descriptor.hpp  error.hpp  graphics_pass.hpp  graphics_pipeline.hpp  hash.hpp  pass.hpp  render_graph.hpp  render_graph_def.hpp  rendering_context.hpp  resource.hpp  shader.hpp  surface.hpp  texture.hpp  vulkan_def.hpp  vulkan_header.hpp  vurl.hpp
include/vurl/wsi/: wayland.hpp  win32.hpp  wsi.hpp  x11.hpp
src/: descriptor.cpp  graphics_pass.cpp  graphics_pipeline.cpp  render_graph.cpp  rendering_context.cpp  shader.cpp  surface.cpp  vma.cpp  vurl.cpp
src/wsi/: wayland.cpp  win32.cpp  x11.cpp
